# BattagliaNavale

./: .gitignore  Board.cpp  CMakeLists.txt  Ironclad.h  README.md  autobuild.sh  main.cpp
include/: BattleShip.h
include/Army/: Army.h
include/Army/Ironclad/: Ironclad.h
include/Army/Submarine/: Submarine.h
include/Army/Support/: Support.h
include/Board/: Board.h
include/Board/Grid/: Grid.h
include/Board/Grid/AttackGrid/: AttackGrid.h
include/Board/Grid/DefenceGrid/: DefenceGrid.h
include/Bot/: Bot.h
include/Prompt/: Prompt.h
include/Utils/: Utils.h
logFiles/: pcLogFile.txt
src/: main.cpp  replay.cpp
src/Army/: Army.cpp
src/Army/Ironclad/: Ironclad.cpp
src/Army/Submarine/: Submarine.cpp
src/Army/Support/: Support.cpp
src/Board/: Board.cpp  oldBoard.cpp
src/Board/Grid/: Grid.cpp
src/Board/Grid/AttackGrid/: AttackGrid.cpp
src/Board/Grid/DefenceGrid/: DefenceGrid.cpp
src/Bot/: Bot.cpp
src/Prompt/: Prompt.cpp
src/Utils/: Utils.cpp
